--- a/simple_service/src/main/resources/application.properties
+++ b/simple_service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port = ${port:8080}
+spring.application.name = simple_service
+
+logging.level.com.netflix.eureka = DEBUG
+logging.level.com.netflix.discovery = DEBUG
